--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://zoejane.github.io/"
+baseURL = "https://zoejane.github.io/hugo-site"
 languageCode = "en-us"
 title = "My Hugo Site"
 theme = "ananke"
