--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ script:
   - hugo
 
 deploy:
-  echo 'hugo-site.zoejane.net' > ./dist/CNAME
   provider: pages
   skip_cleanup: true
   # token is set in travis-ci.org dashboard
@@ -23,3 +22,4 @@ deploy:
   target_branch: gh-pages
   email: deploy@travis-ci.org
   name: deployment-bot
+  fqdn: hugo-site.zoejane.net
